<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mobile TIK</string>
    <string name="silahkan_masuk_untuk_melanjutkan">Silahkan Masuk untuk melanjutkan</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="klik_disini">Klik Disini</string>
    <string name="login">Login</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="silahkan_isi_form_pendaftaran">Silahkan isi form pendaftaran</string>
    <string name="nama">Nama</string>
    <string name="nomor_induk_siswa">Nomor Induk Siswa</string>
    <string name="register">Register</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="login_disini">Login disini</string>
    <string name="reset_password">Reset Password</string>
    <string name="loading">Loading</string>
    <string name="materi">Materi</string>
    <string name="forum">Forum</string>
    <string name="kuis">Kuis</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="sma_alfalah">SMA ISLAM ALFALAH JAMBI</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="silahkan_isi_form_reset_password">Silahkan isi form Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar_lisensi">Daftar Lisensi</string>
    <string name="aplikasi_ini_dibangun_menggunakan_lisensi_berikut">Aplikasi ini dibangun menggunakan lisensi berikut :</string>
    <string name="upload_foto">Upload Foto</string>
    <string name="operasi_dasar_komputer">Operasi Dasar Komputer</string>
    <string name="nilai_kosong">-</string>
    <string name="e_raport">E-Raport</string>
    <string name="nama_profil">Nama\t\t\t:</string>
    <string name="email_profil">Email\t\t\t:</string>
    <string name="nis_profil">NIS\t\t\t\t\t:</string>
    <string name="hasil_kuis">Hasil Kuis</string>
    <string name="lorem_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="isi_pesan">Isi Pesan</string>
    <string name="kirim">Kirim</string>
    <string name="selanjutnya">Selanjutnya</string>


    <array name="fragment_kuis">
        <item>Anda telah mengerjakan Kuis ini</item>
        <item>Selamat mengerjakan Kuis ini</item>
        <item>Selamat mengerjakan Remedial</item>
        <item>Anda telah mengerjakan kuis sebanyak 3 kali, silahkan hubungi guru</item>
    </array>

    <string name="backbtn">backBtn</string>
    <string name="final_txt">Final</string>


    <string-array name="judulKuis">
        <item>Kuis 1</item>
        <item>Kuis 2</item>
        <item>Kuis 3</item>
        <item>Kuis 4</item>
        <item>Kuis 5</item>
    </string-array>

    <string-array name="listID">
        <item>BAB 1 - Operasi Dasar Komputer</item>
        <item>Bab 2 - Fungsi dan Proses Kerja Peralatan Teknologi Informasi dan Komunikasi</item>
        <item>Bab 3 - Etika dan Moral dalam Teknologi Informasi dan Komunikasi</item>
        <item>Bab 4 - Sistem Operasi Komputer</item>
        <item>Bab 5 - Menggunakan Perangkat Lunak Pengolah Kata</item>
    </string-array>

    <string-array name="urlMateri">
        <item tools:ignore="Typos">0vfvuTyQ1E0</item>
        <item>7iQP6uEc7Ko</item>
        <item>bQK9sS6AvN0</item>
        <item>K-8ADRBn_OM</item>
        <item>fn52SOqv3t8</item>
    </string-array>

    <string-array name="namaFile">
        <item tools:ignore="Typos">bab1</item>
        <item>bab2</item>
        <item>bab3</item>
        <item>bab4</item>
        <item>bab5</item>
    </string-array>

    <string-array name="idKuis">
        <item>KuisSatu</item>
        <item>KuisDua</item>
        <item>KuisTiga</item>
        <item>KuisEmpat</item>
        <item>KuisLima</item>
    </string-array>

    <string name="title_activity_bab_pertama">BabPertamaActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="mengaktifkan_dan_mematikan_komputer_sesuai_prosedur">Mengaktifkan dan mematikan komputer sesuai prosedur</string>
    <string name="id_kuis">ID Kuis</string>
    <string name="daftar_siswa">Daftar Siswa</string>
</resources>